--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://ben-ayesu.github.io/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,12 +15,14 @@
     "@types/node": "^16.18.105",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "framer-motion": "^11.3.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-transition-group": "^4.4.5",
     "typescript": "^4.9.5",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
@@ -52,6 +55,7 @@
   },
   "devDependencies": {
     "@types/react-scroll": "^1.8.10",
+    "@types/react-transition-group": "^4.4.11",
     "autoprefixer": "^10.4.20",
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.41",
