refactor nav linkks in header into own component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "cSpell.words": [
         "Attah",
         "Ayesu",
-        "Headshots"
+        "fontawesome",
+        "fortawesome",
+        "Headshots",
+        "Xmark"
     ]
 }
